# ModernCppStarter

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Greeter/: CMakeLists.txt
app/: CMakeLists.txt
app/source/: main.cpp
libGreeter/: CMakeLists.txt
libGreeter/source/: version.h.in
standalone/: CMakeLists.txt
test/: CMakeLists.txt
